fix small horizontal overflow caused by header

--- a/web/src/styles/templates/template--base.scss
+++ b/web/src/styles/templates/template--base.scss
@@ -14,6 +14,10 @@ body {
   font-size: 100%;
 }
 
+.page-wrapper {
+  overflow-x: hidden;
+}
+
 
 // Base Styles
 
